# pg_stat_insights

./: .commit_message_guidelines.txt  .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  PROMETHEUS_GRAFANA_GUIDE.md  README.md  SECURITY.md  TAP_TEST_SUITE_SUMMARY.md  USAGE_EXAMPLES.md  docs-requirements.txt  meson.build  mkdocs.yml  pg_stat_insights--1.0--2.0.sql  pg_stat_insights--1.0.sql  pg_stat_insights--2.0--3.0.sql  pg_stat_insights--2.0.sql  pg_stat_insights--3.0.sql  pg_stat_insights.c  pg_stat_insights.c.bak  pg_stat_insights.conf  pg_stat_insights.control  run_all_tests.sh
docs/: building.md  ci-cd.md  configuration.md  contributing.md  grafana-index-monitoring.md  index.md  installation.md  metrics.md  quick-start.md  testing.md  troubleshooting.md  usage.md  views.md
expected/: 01_extension_basics.out  02_basic_queries.out  03_views_and_aggregates.out  04_statistics_accuracy.out  05_io_and_cache.out  06_wal_tracking.out  07_reset_functionality.out  08_parallel_queries.out  09_jit_tracking.out  10_edge_cases.out  11_comprehensive_metrics.out  12_permissions.out  13_cleanup.out  14_prepared_statements.out  15_complex_joins.out  16_json_operations.out  17_array_operations.out  18_partitioning.out  19_triggers_functions.out  20_window_functions.out  21_transaction_handling.out  22_query_normalization.out  23_replication_monitoring.out  24_logical_replication_setup.out  24_logical_replication_setup.out.pg16.orig  25_replication_dashboard.out  26_replication_stress_test.out  26_replication_stress_test.out.pg16.orig  27_high_volume_queries.out  28_concurrent_operations.out  29_query_complexity.out  30_final_integration.out  31_index_monitoring.out  VERSION_SPECIFIC_FILES.md
packaging/: README.md
po/: Makefile  ja_JP.mo  ja_JP.po  pg_stat_insights.pot  pg_stat_insights_complete.pot  zh_CN.mo  zh_CN.po  zh_TW.mo  (+1 more)
(+92 files in other folders)
